--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,8 @@ version: '3'
 services:
   laratrack_web:
     build: ./
+    volumes:
+      - ./:/var/www/html
     ports:
       - '80:80'
   laratrack_socket:
