--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,12 @@
 version: '3'
 
 services:
+  laratrack_nginx:
+    build: ./nginx
+    links:
+      - laratrack_socket
+    ports:
+     - "3001:80"
   laratrack_web:
     build: ./
     volumes:
@@ -12,8 +18,8 @@ services:
     volumes:
       - ./websocket/:/usr/src/app
     restart: always
-    ports:
-      - '3001:3000'
+    expose:
+      - '3000'
     links:
       - laratrack_redis
   laratrack_redis:
