--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -13,6 +13,17 @@ http {
     access_log off;
 
     location / {
+        proxy_pass http://laratrack_web;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    location /socket/ {
+    
+        rewrite /socket/(.*) /$1  break;
+
         set_real_ip_from 103.21.244.0/22;
         set_real_ip_from 103.22.200.0/22;
         set_real_ip_from 103.31.4.0/22;
